--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+   <head>
+        <meta charset="UTF-F8">
+        <title>Sadio M-Salah-Mané</title>
+        <link rel="stylesheet" href="style.css">
+   </head>
+
+   <body>
+    <h1>Sadio mané</h1>
+
 <h1>Sadio Mané</h1>
 
 <p>Sadio Mané é um jogador de futebol senegalês que se destacou como um dos principais atacantes do Liverpool FC e da seleção nacional do Senegal. Nascido em 10 de 
@@ -16,3 +27,5 @@ FIFA e a Copa Africana das Nações (CAN), buscando levar o sucesso do futebol s
 sua generosidade e compromisso com a filantropia. Ele financiou a construção de escolas e uma mesquita em sua cidade natal, Bambali, e está envolvido em várias 
 iniciativas de caridade. Sadio Mané é amplamente respeitado no mundo do futebol não apenas por suas habilidades como jogador, mas também por seu caráter e 
 contribuições para a comunidade. Ele continua a ser uma figura importante no cenário esportivo internacional.</p>
+</body>
+</html>
