--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
 <h1>Sadio Mané</h1>
 
+<img id="imagem" src="Sádio Mané.JPEG">
+
 <p>Sadio Mané é um jogador de futebol senegalês que se destacou como um dos principais atacantes do Liverpool FC e da seleção nacional do Senegal. Nascido em 10 de 
 abril de 1992, na cidade de Bambali, no Senegal, Mané cresceu em uma família humilde e começou a jogar futebol em sua infância. Ele rapidamente chamou a atenção 
 de olheiros e ingressou na Academia Génération Foot, um clube de futebol senegalês que tem parcerias com clubes europeus.</p>
