--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
    </head>
 
    <body>
-    <h1>Sadio mané</h1>
 
 <h1>Sadio Mané</h1>
+<h1>Biografia de Sádio Mané</h1>
 
 <img id="imagem" src="Sádio Mané.JPEG">
 
